adds footer and main element for consistency

--- a/index.html
+++ b/index.html
@@ -105,5 +105,8 @@
         </div>
       </div>
     </main>
+    <footer class="text-center">
+      <p>© BidHaven 2024</p>
+    </footer>
   </body>
 </html>
