--- a/listing/index.html
+++ b/listing/index.html
@@ -50,24 +50,29 @@
       </nav>
     </header>
     <!--Start of main-->
-    <div class="container m-auto mt-4">
-      <div class="row g-3">
-        <div class="card col-md rounded" id="listing-media">
-          <!--Dynamically insert info here-->
-        </div>
-        <div class="card col-md rounded ms-md-3">
-          <div class="m-3" id="listing-info">
+    <main>
+      <div class="container m-auto mt-4">
+        <div class="row g-3">
+          <div class="card col-md rounded" id="listing-media">
             <!--Dynamically insert info here-->
+          </div>
+          <div class="card col-md rounded ms-md-3">
+            <div class="m-3" id="listing-info">
+              <!--Dynamically insert info here-->
+            </div>
+          </div>
+        </div>
+        <div class="row mt-3">
+          <div class="card col-md-12 rounded">
+            <div class="m-3" id="bid-history">
+              <!--Dynamically insert info here-->
+            </div>
           </div>
         </div>
       </div>
-      <div class="row mt-3">
-        <div class="card col-md-12 rounded">
-          <div class="m-3" id="bid-history">
-            <!--Dynamically insert info here-->
-          </div>
-        </div>
-      </div>
-    </div>
+    </main>
+    <footer class="text-center">
+      <p>© BidHaven 2024</p>
+    </footer>
   </body>
 </html>
