--- a/profile/index.html
+++ b/profile/index.html
@@ -85,5 +85,8 @@
         </div>
       </div>
     </main>
+    <footer class="text-center">
+      <p>© BidHaven 2024</p>
+    </footer>
   </body>
 </html>
