--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="col m-auto" style="width: 350px">
           <div class="card mt-3">
-            <form id="login-form" class="m-4">
+            <form id="login-form" class="m-4" novalidate>
               <h1 class="fs-5 text-center mb-4">Login to your account!</h1>
               <div class="mb-3 form-group">
                 <label
@@ -64,12 +64,17 @@
                   >Email</label
                 >
                 <input
-                  type="text"
+                  type="email"
                   class="form-control"
                   name="email"
+                  id="email"
                   pattern="^[^\s@]+@(stud.noroff.no)$"
                   required
+                  placeholder="name@stud.noroff.no"
                 />
+                <div class="invalid-feedback">
+                  Please use a valid @stud.noroff.no email address.
+                </div>
               </div>
               <div class="mb-3 form-group">
                 <label
@@ -82,9 +87,14 @@
                   type="password"
                   class="form-control"
                   name="password"
+                  id="password"
                   minlength="8"
                   required
+                  placeholder="Password"
                 />
+                <div class="invalid-feedback">
+                  Password must be at least 8 characters long.
+                </div>
               </div>
               <p class="text-center mb-4">
                 Not a member?
@@ -93,6 +103,7 @@
               <div class="text-center mb-3">
                 <button type="submit" class="btn btn-primary">Login</button>
               </div>
+              <div id="error-message" class="alert alert-danger d-none"></div>
             </form>
           </div>
         </div>
