--- a/profile/signup/index.html
+++ b/profile/signup/index.html
@@ -57,7 +57,7 @@
             class="col-md-6 d-flex justify-content-center order-2 order-md-1 mb-md-0"
           >
             <div class="card rounded" style="width: 350px">
-              <form id="register-form">
+              <form id="register-form" novalidate>
                 <div class="mx-3 mb-3 form-group mt-4">
                   <label
                     for="name"
@@ -68,10 +68,15 @@
                   <input
                     type="text"
                     class="form-control"
-                    required
                     name="name"
+                    id="name"
                     placeholder="Name"
+                    required
+                    minlength="3"
                   />
+                  <div class="invalid-feedback">
+                    Username must be at least 3 characters.
+                  </div>
                 </div>
                 <div class="mx-3 mb-3 form-group">
                   <label
@@ -81,43 +86,38 @@
                     >Email</label
                   >
                   <input
-                    type="text"
+                    type="email"
                     class="form-control"
                     name="email"
+                    id="email"
                     pattern="^[^\s@]+@(stud.noroff.no)$"
                     required
                     placeholder="name@stud.noroff.no"
                   />
+                  <div class="invalid-feedback">
+                    Please use a @stud.noroff.no email address.
+                  </div>
                 </div>
                 <div class="mx-3 mb-3 form-group">
                   <label
                     for="password"
                     class="form-label"
                     aria-label="Input for password"
-                    >Password:</label
+                    >Password</label
                   >
                   <input
                     type="password"
                     class="form-control"
                     name="password"
-                    minlength="8"
+                    id="password"
+                    pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
                     required
                     placeholder="Password"
                   />
-                </div>
-                <div class="mx-3 mb-3 form-group">
-                  <label
-                    for="avatar"
-                    class="form-label"
-                    aria-label="Input for avatar URL"
-                    >Avatar URL</label
-                  >
-                  <input
-                    type="url"
-                    class="form-control"
-                    name="avatar"
-                    placeholder=""
-                  />
+                  <div class="invalid-feedback">
+                    Password must be at least 8 characters and include a letter
+                    and a number.
+                  </div>
                 </div>
                 <div class="text-center mb-4">
                   <button type="submit" class="btn btn-primary">Sign up</button>
@@ -126,7 +126,7 @@
             </div>
           </div>
           <div class="col-md-4 text-center order-md-2 mb-md-0">
-            <h1>
+            <h1 class="text-primary">
               Join BidHaven Today <br />and Get 1000 Credit <br />Points for
               Free!
             </h1>
