updates html and styles for better responsiveness and user experience

--- a/profile/index.html
+++ b/profile/index.html
@@ -51,35 +51,25 @@
     </header>
     <!--Start of main-->
     <main>
-      <div class="container row m-auto mt-4">
-        <div class="col-3">
-          <div class="card rounded" style="height: 590px">
-            <div class="m-3" id="profile-info">
+      <div class="container m-auto mt-4">
+        <div class="row">
+          <div class="card col-md-4 rounded me-4">
+            <div class="m-3 mx-auto" id="profile-info">
               <!--Dynamically insert info here-->
             </div>
           </div>
-        </div>
-        <div class="col-9">
-          <div class="card rounded mb-4">
-            <div class="m-3" id="user-listings">
-              <p class="text-primary fs-5 mt-4">Your listings</p>
-              <div class="row fs-5">
-                <p class="col">Title</p>
-                <p class="col">Description</p>
-                <p class="col">Status</p>
+          <div class="col-md">
+            <div class="row">
+              <div class="card rounded mb-4">
+                <div class="m-3" id="user-listings">
+                  <!--Dynamically insert info here-->
+                </div>
               </div>
-              <!--Dynamically insert info here-->
-            </div>
-          </div>
-          <div class="card rounded">
-            <div class="m-3" id="user-bid-history">
-              <p class="text-primary fs-5 mt-4">Bid history</p>
-              <div class="row fs-5">
-                <p class="col">Title</p>
-                <p class="col">Amount</p>
-                <p class="col">Status</p>
+              <div class="card rounded">
+                <div class="m-3" id="user-bid-history">
+                  <!--Dynamically insert info here-->
+                </div>
               </div>
-              <!--Dynamically insert info here-->
             </div>
           </div>
         </div>
