updates styling of single listing files for consistency and responsiveness

--- a/profile/index.html
+++ b/profile/index.html
@@ -52,15 +52,15 @@
     <!--Start of main-->
     <main>
       <div class="container m-auto mt-4">
-        <div class="row">
-          <div class="card col-md-4 rounded me-4">
+        <div class="row row-gap-3">
+          <div class="card col-md-4 rounded me-3">
             <div class="m-3 mx-auto" id="profile-info">
               <!--Dynamically insert info here-->
             </div>
           </div>
           <div class="col-md">
-            <div class="row">
-              <div class="card rounded mb-4">
+            <div class="row row-gap-3">
+              <div class="card rounded">
                 <div class="m-3" id="user-listings">
                   <!--Dynamically insert info here-->
                 </div>
