--- a/listing/index.html
+++ b/listing/index.html
@@ -52,20 +52,32 @@
     <!--Start of main-->
     <main>
       <div class="container m-auto mt-4">
-        <div class="row g-3">
-          <div class="card col-md rounded" id="listing-media">
-            <!--Dynamically insert info here-->
+        <div class="row row-gap-3">
+          <!-- Card for listing media -->
+          <div class="col-md">
+            <div class="card rounded">
+              <div class="media-container" id="listing-media">
+                <!-- Dynamically insert image here -->
+              </div>
+            </div>
           </div>
-          <div class="card col-md rounded ms-md-3">
-            <div class="m-3" id="listing-info">
-              <!--Dynamically insert info here-->
+
+          <!-- Card for listing info -->
+          <div class="col-md">
+            <div class="card rounded">
+              <div class="info-container p-3" id="listing-info">
+                <!-- Dynamically insert listing info here -->
+              </div>
             </div>
           </div>
         </div>
+
         <div class="row mt-3">
-          <div class="card col-md-12 rounded">
-            <div class="m-3" id="bid-history">
-              <!--Dynamically insert info here-->
+          <div class="col-md-12">
+            <div class="card rounded">
+              <div class="p-3" id="bid-history">
+                <!-- Dynamically insert bid history here -->
+              </div>
             </div>
           </div>
         </div>
