--- a/listing/index.html
+++ b/listing/index.html
@@ -21,7 +21,7 @@
   <body>
     <!--Start of header-->
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">
             <img
