--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
     <!--Start of main-->
     <main>
-      <div class="hero-section">
+      <div id="hero-section">
         <div class="container text-center">
           <h1 class="text-primary" style="font-size: 48px">
             Join BidHaven Today <br />
