--- a/listing/add-new/index.html
+++ b/listing/add-new/index.html
@@ -15,8 +15,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/dist/css/styles.css" />
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="/src/js/index.mjs"></script>
+    <script
+      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
+    <script type="module" src="/src/js/index.mjs" defer></script>
   </head>
   <body>
     <!--Start of header-->
@@ -26,8 +29,8 @@
           <a class="navbar-brand" href="/index.html">
             <img
               src="/src/assets/logo/bidhaven-logo.png"
-              alt="Brand Logo"
-              class="d-inline-block align-text-top"
+              alt="BidHaven Logo"
+              class="d-inline-block align-text-top img-fluid"
             />
           </a>
           <button
