adds loading indicator / spinner

--- a/index.html
+++ b/index.html
@@ -103,6 +103,15 @@
             </nav>
           </div>
           <div id="listings">
+            <div
+              id="loading-spinner"
+              class="text-center text-primary my-4"
+              style="display: none"
+            >
+              <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
             <!--Listing items dynamic inserted here-->
           </div>
         </div>
