--- a/profile/index.html
+++ b/profile/index.html
@@ -70,7 +70,18 @@
               </div>
               <div class="card rounded">
                 <div class="m-3" id="user-bid-history">
-                  <!--Dynamically insert info here-->
+                  <div class="media-container" id="listing-media">
+                    <div
+                      id="loading-spinner"
+                      class="text-center text-primary my-4"
+                      style="display: none"
+                    >
+                      <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                      </div>
+                    </div>
+                    <!--Dynamically insert info here-->
+                  </div>
                 </div>
               </div>
             </div>
