--- a/listing/add-new/index.html
+++ b/listing/add-new/index.html
@@ -56,7 +56,7 @@
     <main>
       <div class="container mt-lg-4">
         <div class="card rounded m-auto" style="max-width: 800px">
-          <form id="add-listing" class="m-5">
+          <form id="add-listing" class="m-5 needs-validation" novalidate>
             <h1 class="fs-5 text-center mb-4">Add new listing</h1>
             <div class="mb-3 form-group">
               <label for="title" class="form-label" aria-label="Input for title"
@@ -67,9 +67,13 @@
                 class="form-control"
                 id="title"
                 name="title"
-                placeholder=""
+                placeholder="Vintage Wooden Chair"
                 required
+                minlength="3"
               />
+              <div class="invalid-feedback">
+                Please fill out a title (at least 3 characters).
+              </div>
             </div>
             <div class="mb-3 form-group">
               <label
@@ -83,23 +87,26 @@
                 class="form-control"
                 id="description"
                 name="description"
-                placeholder=""
+                placeholder="Describe the item condition, materials, and any unique features"
               ></textarea>
             </div>
             <div class="mb-3 form-group">
               <label
                 for="image"
                 class="form-label"
-                aria-label="Input for image url"
-                >Image</label
+                aria-label="Input for image URL"
+                >Image URL</label
               >
               <input
                 type="url"
                 class="form-control"
                 id="image"
                 name="image"
-                placeholder=""
+                placeholder="https://example.com/image.jpg"
               />
+              <div class="invalid-feedback">
+                Please provide a valid image URL.
+              </div>
             </div>
             <div class="form-group pb-3">
               <label
@@ -116,13 +123,17 @@
                 placeholder=""
                 required
               />
+              <div class="invalid-feedback">
+                Please provide a valid deadline date and time.
+              </div>
             </div>
             <hr />
             <div class="text-center pt-3">
               <h2 class="fs-5">Ready to publish?</h2>
               <p>
-                When you click publish your listing goes live!<br />
-                The listing information will be displayed publicy.
+                When you click publish, your listing goes live!
+                <br />
+                The listing information will be displayed publicly.
               </p>
               <p class="pb-2">
                 You can view your published listings on your profile page.
