updated head with new script and removes unnecessary defer

--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/dist/css/styles.css" />
-    <script
-      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-      defer
-    ></script>
-    <script type="module" src="/src/js/index.mjs" defer></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+    <script type="module" src="/src/js/index.mjs"></script>
   </head>
   <body>
     <!--Start of header-->
