--- a/profile/signup/index.html
+++ b/profile/signup/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BidHaven |Sign up</title>
+    <title>BidHaven | Sign up</title>
     <meta
       name="description"
       content="Welcome to BidHaven! Sign up today and get 1000 credit points for free."
@@ -15,11 +15,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/dist/css/styles.css" />
-    <script
-      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
-      defer
-    ></script>
-    <script type="module" src="/src/js/index.mjs" defer></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+    <script type="module" src="/src/js/index.mjs"></script>
   </head>
   <body>
     <!--Start of header-->
