Revert "updated head with new script and removes unnecessary defer"
This reverts commit 0d9f06f03952d7f932920181b44a3a9eec5bff7f.

--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BidHaven | Sign up</title>
+    <title>BidHaven |Sign up</title>
     <meta
       name="description"
       content="Welcome to BidHaven! Please login to embark on the fun of bidding."
@@ -15,8 +15,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/dist/css/styles.css" />
-    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
-    <script type="module" src="/src/js/index.mjs"></script>
+    <script
+      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
+    <script type="module" src="/src/js/index.mjs" defer></script>
   </head>
   <body>
     <!--Start of header-->
