--- a/listing/add-new/index.html
+++ b/listing/add-new/index.html
@@ -15,8 +15,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/dist/css/styles.css" />
-    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
-    <script type="module" src="/src/js/index.mjs"></script>
+    <script
+      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+      defer
+    ></script>
+    <script type="module" src="/src/js/index.mjs" defer></script>
   </head>
   <body>
     <!--Start of header-->
