updates head, adds script and removes unnecessary defer

--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BidHaven |Sign up</title>
+    <title>BidHaven | Login</title>
     <meta
       name="description"
       content="Welcome to BidHaven! Please login to embark on the fun of bidding."
@@ -16,10 +16,10 @@
     />
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <script
-      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       defer
     ></script>
-    <script type="module" src="/src/js/index.mjs" defer></script>
+    <script type="module" src="/src/js/index.mjs"></script>
   </head>
   <body>
     <!--Start of header-->
