--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     />
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <script
-      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       defer
     ></script>
-    <script type="module" src="/src/js/index.mjs" defer></script>
+    <script type="module" src="/src/js/index.mjs"></script>
   </head>
   <body>
     <!--Start of header-->
